--- a/html/reserve.html
+++ b/html/reserve.html
@@ -9,8 +9,15 @@
 </head>
 
 <body>
-
-
+    <div class="container">
+        <div class="jumbotron text-center">
+            <h1 class="text-center font-weight-bold display-4"><i class="fas fa-fire"></i> Hot Restaurant</h1>
+            <hr class="my-4">
+            <h2 class="text-center">Make your reservation</h2>
+            <br>
+            <a class="btn btn-primary btn-lg" href="#" role="button"><i class="fas fa-table"></i> View Tables</a>
+        </div>
+    </div>
 
 
 
