button links and formatting

--- a/html/reserve.html
+++ b/html/reserve.html
@@ -15,7 +15,8 @@
             <hr class="my-4">
             <h2 class="text-center">Make your reservation</h2>
             <br>
-            <a class="btn btn-primary btn-lg" href="#" role="button"><i class="fas fa-table"></i> View Tables</a>
+            <a class="btn btn-primary btn-lg" href="./tables.html" role="button"><i class="fas fa-table"></i> View Tables</a>
+            <a class="btn btn-light btn-lg" href="./home.html" class="btn btn-light btn-lg"><i class="fas fa-home"></i></a>
         </div>
     </div>
 
