--- a/html/reserve.html
+++ b/html/reserve.html
@@ -20,10 +20,33 @@
         </div>
     </div>
 
-
-
-
-
+    <div class="container">
+        <div class="card">
+            <div class="card-header bg-light">Table Reservation</div>
+                <div class="card-body bg-whit">
+                    <form>
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="name" class="form-control" id="name">
+                        </div>
+                        <div class="form-group">
+                            <label for="phoneNumber">Phone Number</label>
+                            <input type="number" class="form-control" id="phoneNumber">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" id="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="id">Unique ID</label>
+                            <input type="number" class="form-control" id="id">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
