--- a/html/home.html
+++ b/html/home.html
@@ -16,10 +16,11 @@
             <h2 class="text-center">Make your reservation</h2>
             <br>
             <a class="btn btn-primary btn-lg" href="#" role="button"><i class="fas fa-table"></i> View Tables</a>
+            <a class="btn btn-danger btn-lg" href="#" role="button"><i class="fas fa-table"></i> Make Reservation</a>
         </div>
     </div>
 
-    <div class="card-body">
+    <div class="card-body" style="margin-left: 70px">
             <a href="#" class="card-link">API Table Link</a>
             <a href="#" class="card-link">API Wait link</a>
           </div>
