added icon to reservation button

--- a/html/home.html
+++ b/html/home.html
@@ -16,7 +16,7 @@
             <h2 class="text-center">Make your reservation</h2>
             <br>
             <a class="btn btn-primary btn-lg" href="#" role="button"><i class="fas fa-table"></i> View Tables</a>
-            <a class="btn btn-danger btn-lg" href="#" role="button"><i class="fas fa-table"></i> Make Reservation</a>
+            <a class="btn btn-danger btn-lg" href="#" role="button"><i class="fas fa-archive"></i> Make Reservation</a>
         </div>
     </div>
 
